Coverity analysis defect 177561: Using invalid iterator

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Query Optimization
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Using invalid iterator

      Undefined behavior may result; the program may crash or subtly misbehave. An invalid or past-the-end iterator is being used
      /src/mongo/db/pipeline/optimization/rule_based_rewriter.cpp:42: INVALIDATE_ITERATOR 177561 Calling "erase" invalidates iterator "itr".
      /src/mongo/db/pipeline/optimization/rule_based_rewriter.cpp:44: INVALIDATE_ITERATOR 177561 Using invalid iterator "itr".

            Assignee:
            Henri Nikku
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: