SERVER-113472 Clean up common transforms functions (#43592)

GitOrigin-RevId: bc98024c3ba74981c6d09d501f73f8532cbdcbd8